force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <!--compactLayoutAssignment>Leads_Custom_Compact_Layout</compactLayoutAssignment-->
    <!--recordTypeTrackHistory>true</recordTypeTrackHistory-->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>