force-app/main/default/objects/Lead/fields/Accepts_Reimbursement_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Reimbursement_for_Referral__c</fullName>
    <label>Accepts Reimbursement for Referral</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>