force-app/main/default/objects/Lead/fields/Contact_Method_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Preference__c</fullName>
    <label>Contact Method Preference</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Method_Preference</valueSetName>
    </valueSet>
</CustomField>