force-app/main/default/objects/Lead/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Doctors Of Osteopathy</fullName>
                <isActive>false</isActive>
                <label>Doctors Of Osteopathy</label>
            </value>
            <value>
                <fullName>Medical Doctors</fullName>
                <isActive>false</isActive>
                <label>Medical Doctors</label>
            </value>
            <value>
                <fullName>Not Known</fullName>
                <isActive>false</isActive>
                <label>Not Known</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>