force-app/main/default/objects/Lead/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <precision>10</precision>
    <scale>2</scale>

    <type>Number</type>
</CustomField>