force-app/main/default/objects/Lead/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facility_Type_c</valueSetName>
    </valueSet>
</CustomField>