force-app/main/default/objects/Lead/fields/Facility_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Only required if “Other” is selected in Facility Type</inlineHelpText>
    <label>Facility Type Description</label>
    <length>30</length>

    <type>Text</type>
</CustomField>