force-app/main/default/objects/Lead/fields/HCP_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>HCP_Referral_Source__c</fullName>
    <label>HCP Referral Source</label>

    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HCP_Referral_Source_c</valueSetName>
    </valueSet>
</CustomField>