force-app/main/default/objects/Lead/fields/Invited_by_PI__c.field-meta.xml
<CustomField>
    <fullName>Invited_by_PI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invited by PI</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invited HCPs</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>