force-app/main/default/objects/Lead/fields/License_State__c.field-meta.xml
<CustomField>
    <fullName>License_State__c</fullName>
    <label>License State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>