force-app/main/default/objects/Lead/fields/National__c.field-meta.xml
<CustomField>
    <fullName>National__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>National Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>