force-app/main/default/objects/Lead/fields/National_ID_Country__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Country__c</fullName>
    <label>National ID Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>