force-app/main/default/objects/Lead/fields/OneKey_ID__c.field-meta.xml
<CustomField>
    <fullName>OneKey_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OneKey ID</label>
    <length>30</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>