force-app/main/default/objects/Lead/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org ID</label>
    <length>30</length>

    <type>Text</type>
</CustomField>