force-app/main/default/objects/Lead/fields/Other_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Address</label>
    <length>255</length>

    <type>Text</type>
</CustomField>