force-app/main/default/objects/Lead/fields/Override_Phone__c.field-meta.xml
<CustomField>
    <fullName>Override_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Phone</label>

    <type>Phone</type>
</CustomField>