force-app/main/default/objects/Lead/fields/PI_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PI_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PI First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>