force-app/main/default/objects/Lead/fields/PI_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PI_Last_Name__c</fullName>
    <formula>IF(Study_Site__c != NULL, HYPERLINK( &quot;/&quot;&amp;Study_Site__r.Principal_Investigator__c , Study_Site__r.Principal_Investigator__r.FirstName&amp;&quot; &quot; &amp;Study_Site__r.Principal_Investigator__r.LastName ),HYPERLINK( &quot;/&quot;&amp;Invited_by_PI__c , Invited_by_PI__r.FirstName&amp;&quot; &quot; &amp;Invited_by_PI__r.LastName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI Contact</label>
    <type>Text</type>
</CustomField>