force-app/main/default/objects/Lead/fields/PI_Last_Name_new__c.field-meta.xml
<CustomField>
    <fullName>PI_Last_Name_new__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PI Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>