force-app/main/default/objects/Lead/fields/POC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Contact First Name</label>
    <length>30</length>

    <type>Text</type>
</CustomField>