force-app/main/default/objects/Lead/fields/POC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Contact Last Name</label>
    <length>30</length>

    <type>Text</type>
</CustomField>