force-app/main/default/objects/Lead/fields/POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>POC_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Contact Phone</label>

    <type>Phone</type>
</CustomField>