force-app/main/default/objects/Lead/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <label>Point of Contact Type</label>

    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Point_of_Contact_Type</valueSetName>
    </valueSet>
</CustomField>