force-app/main/default/objects/Lead/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Code</label>
    <length>30</length>

    <type>Text</type>
</CustomField>