force-app/main/default/objects/Lead/fields/State_License_Status__c.field-meta.xml
<CustomField>
    <fullName>State_License_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State License Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>