force-app/main/default/objects/Lead/fields/Study_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Code_Name__c</fullName>
    <formula>Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Code Name</label>

    <type>Text</type>
</CustomField>