force-app/main/default/objects/Lead/fields/Study_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Study_Site_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Site Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>