force-app/main/default/objects/Lead/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID</label>
    <length>30</length>

    <type>Text</type>
</CustomField>