force-app/main/default/objects/Lead/fields/Unqualified_Description__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is only required if “Other” is selected for Unqualified Reason</inlineHelpText>
    <label>Unqualified Description</label>
    <length>255</length>

    <type>Text</type>
</CustomField>