force-app/main/default/objects/Lead/fields/Virtual_PI_Contact__c.field-meta.xml
<CustomField>
    <fullName>Virtual_PI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Virtual PI Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Virtual PI Contact)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>