force-app/main/default/objects/Lead/recordTypes/Default_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Default_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Default Lead Process</businessProcess>
    <description>Default</description>
    <label>Default Lead Record Type</label>
</RecordType>