force-app/main/default/objects/Lead/validationRules/LeadEmailNurturing.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadEmailNurturing</fullName>
    <active>true</active>
    <description>Email has to be populated for Leads Before Qualified status</description>
    <errorConditionFormula>AND(OR(OR(ISPICKVAL(Status,&#39;Qualified and Send Invitation&#39;),ISPICKVAL(Status,&#39;Qualified&#39;)),IsConverted), ISBLANK(Email ) &amp;&amp; ISBLANK(Override_Email__c ))</errorConditionFormula>
    <errorMessage>Email has to be populated for Leads Before Qualified status</errorMessage>
</ValidationRule>