force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>Study_Code_Name__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Protocol_Number__c</columns>
    <columns>Study_Site_Number__c</columns>
    <columns>PI_Last_Name__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Leads</label>
</ListView>